# explog-cms

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  explog.toml
.agent/memory/: PROJECT.md
.agent/rules/: rules.md
.seo-report/: index.html  report.json
Readme/: README_ar.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_hi.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_pl.md  README_pt.md  README_ru.md  README_th.md  README_tr.md  README_vi.md  README_zh-CN.md  README_zh-TW.md
content/pages/about/: index.md  page.json
content/pages/contact/: page.json
content/pages/expgames/: page.json
content/pages/landing/: index.html  page.json  script.js  style.css
content/pages/portfolio/: page.json
content/pages/spacesurvival/: page.json
docs/: explog_architecture.md  frontmatter-schema.md  pages.md  plugins.md  security.md  themes.md  user_guide.md
src/: lib.rs  main.rs
src/cli/: build.rs  clean.rs  dev.rs  mod.rs  new.rs  plugin.rs  scaffolding.rs  seo.rs
src/core/: asset_validator.rs  assets.rs  build_stage.rs  builder.rs  cache.rs  config.rs  content.rs  feed.rs  image_cdn.rs  images.rs  minifier.rs  mod.rs  page_types.rs  pipeline_builder.rs  plugin_system.rs  scheduling.rs  search.rs  seo.rs  seo_report.rs  sitemap.rs  template.rs  theme_loader.rs
src/models/: mod.rs  page.rs  post.rs  site.rs
themes/aurora/: theme.toml
themes/default/: theme.toml
themes/journal/: theme.toml
themes/magazina/: theme.toml
themes/minimal/: theme.toml
themes/vibe/: theme.toml
themes/zenith/: theme.toml
(+142 files in other folders)
